pendiente pasar los random a uno?

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Rigo with Vanilla.js</title>
+    <title>Excuses & Co.</title>
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
@@ -14,16 +14,22 @@
   </head>
   <body>
     <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
-      </div>
+      <h1 class="scale-up-left" id="excuse"></h1>
+    </div>
+    <div>
+      <footer class="scale-up-horizontal-right">
+        <i
+          >&copy; Please be aware this is a professional excuse generator I
+          created for my personal use and all excuses provided are...fake I am
+          afraid!</i
+        >
+        😅
+        <br /><i
+          >However, you are more than welcome to use it for yourself in case you
+          find it helpful.</i
+        >
+      </footer>
+      <script type="text/javascript" src="script.js"></script>
     </div>
   </body>
 </html>
